force-app/main/default/objects/Campaign/fields/campaign_utm_content__c.field-meta.xml
<CustomField>
    <fullName>campaign_utm_content__c</fullName>
    <description>UTM ID Field that Identifies the content zone, such as a call-to-action message.</description>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>