force-app/main/default/objects/Campaign/fields/campaign_utm_medium__c.field-meta.xml
<CustomField>
    <fullName>campaign_utm_medium__c</fullName>
    <description>UTM Field that Identifies the medium, such as a search engine, a social media platform, or another platform.</description>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>