force-app/main/default/objects/Campaign/fields/campaign_utm_source__c.field-meta.xml
<CustomField>
    <fullName>campaign_utm_source__c</fullName>
    <description>UTM Source field that Identifies the source of the traffic, such as Google or AdWords. (This can be different from Lead Source)</description>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>