force-app/main/default/objects/Campaign/fields/import_id__c.field-meta.xml
<CustomField>
    <fullName>import_id__c</fullName>
    <description>Field to help identify import files</description>
    <label>Import Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>