force-app/main/default/objects/Campaign/fields/PMC_SS_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Need lookup for the products-campaign.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>