force-app/main/default/objects/Campaign/listViews/All_BR_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_BR_Campaigns</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Reisdorfer</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Pizol</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Brazil</value>
    </filters>
    <label>All BR Campaigns</label>
    <sharedTo>
        <role>PMC_SA_B2CSalesTeam</role>
        <role>PMC_SA_MarketingTeam</role>
    </sharedTo>
</ListView>