force-app/main/default/objects/Campaign/listViews/AllActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Active Campaigns</label>
</ListView>